--- a/index.html
+++ b/index.html
@@ -1,7 +1,9 @@
 <html>
-<title>Pertemuan 9 : Github</title>
+  <head>
+    <title>Pertemuan 9 : Github</title>
+  </head>
 <body>
-<h1>Basic Penggunaan Github<h1>
-<img src="https://lh3.googleusercontent.com/proxy/wBx_IPKW4s6XTYTNbVqmFlrH-Ggaa50y-7kGNeLgE6iJt7BFmYJ9BUAxONjDOpWf87HhvqyA5Y4vaaFwGOzAfYfM3c1hTPsL85zmvWQHdq7Vht0roweN1G6DdruY7DYnYOxumnySaPRhn2YTFN4047k_DxefOcRbsOXdGCK-cSecWK6qng">
+  <h1>Basic Penggunaan Github<h1>
+  <img src="https://lh3.googleusercontent.com/proxy/wBx_IPKW4s6XTYTNbVqmFlrH-Ggaa50y-7kGNeLgE6iJt7BFmYJ9BUAxONjDOpWf87HhvqyA5Y4vaaFwGOzAfYfM3c1hTPsL85zmvWQHdq7Vht0roweN1G6DdruY7DYnYOxumnySaPRhn2YTFN4047k_DxefOcRbsOXdGCK-cSecWK6qng">
 </body>
 </html>
